<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.4.5</version>
        <relativePath />
    </parent>

    <artifactId>cui-java-tools</artifactId>
    <name>cui java tools</name>
    <version>2.6-SNAPSHOT</version>
    <description>Utility Library acting as a replacement for google's guava,
        certain apache-commons libraries and logging facades/frameworks.
    </description>
    <packaging>jar</packaging>

    <url>https://github.com/cuioss/cui-java-tools/</url>

    <scm>
        <url>https://github.com/cuioss/cui-java-tools/</url>
        <connection>scm:git:https://github.com/cuioss/cui-java-tools.git</connection>
        <developerConnection>scm:git:https://github.com/cuioss/cui-java-tools/</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <!-- Required by the parent pom's maven-jar-plugin configuration; without it the
             default derived from the artifactId ('de.cuioss.cui-java-tools') is not a
             valid module name and the build fails. Ignored at runtime for this modular jar. -->
        <maven.jar.plugin.automatic.module.name>de.cuioss.java.tools</maven.jar.plugin.automatic.module.name>
    </properties>

    <issueManagement>
        <url>https://github.com/cuioss/cui-java-tools/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.cuioss</groupId>
                <artifactId>java-ee-orthogonal</artifactId>
                <version>${version.cui.parent}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>3.0.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>de.cuioss</groupId>
                <artifactId>java-ee-10-bom</artifactId>
                <version>${version.cui.parent}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
        </dependency>
        <!-- Unit testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.cuioss.test</groupId>
            <artifactId>cui-test-generator</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
